--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -28,4 +28,4 @@ jobs:
         run: dotnet build --no-restore
 
       - name: Run tests
-        run: dotnet test SimpleFunctionApp.Tests/UnitTest1.cs --no-build --verbosity normal
+        run: dotnet test SimpleFunctionApp.Tests/SimpleFunctionApp.Tests.csproj --no-build --verbosity normal
