--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -28,5 +28,5 @@ jobs:
         run: dotnet build --no-restore
 
       - name: Run tests
-        run: dotnet test SimpleFunctionApp.Tests --no-build --verbosity normal
+        run: dotnet test SimpleFunctionApp.Tests/ --no-build --verbosity normal
         
