--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -21,15 +21,14 @@ jobs:
         with:
           dotnet-version: "8.0.x"
 
+      - name: Clean build
+        run: dotnet clean
+
       - name: Restore dependencies
         run: dotnet restore
 
       - name: Build the project
         run: dotnet build --no-restore
 
-      - name: Clean build
-        run: dotnet clean
-
       - name: Run tests
-        run: dotnet test SimpleFunctionApp.Tests/SimpleFunctionApp.Tests.csproj --no-build --verbosity normal --logger "trx" --blame --filter FullyQualifiedName~UnitTest1.TestAddNumbers
-
+        run: dotnet test SimpleFunctionApp.Tests/SimpleFunctionApp.Tests.csproj --no-build --verbosity normal --logger "trx" --blame
