--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -31,4 +31,4 @@ jobs:
         run: dotnet build --no-restore
 
       - name: Run tests
-        run: dotnet test SimpleFunctionApp.Tests/SimpleFunctionApp.Tests.csproj --no-build --verbosity normal --logger "trx" --blame
+        run: dotnet test SimpleFunctionApp.Tests/SimpleFunctionApp.Tests.csproj --verbosity normal --logger "trx" --blame
